# drying_paint

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: channels.rs  context.rs  cycle_debug.rs  event.rs  lib.rs  pointer.rs  queue.rs  sync.rs  trigger.rs  watched.rs  watched_core.rs  watcher.rs
tests/: no_missing_fns.rs
