[package]
name = "drying_paint"
version = "0.4.5"
authors = ["Violet <violet@geeklint.com>"]
edition = "2018"

description = "Implementation of observer pattern for Rust"
homepage = "https://crates.io/crates/drying_paint"
repository = "https://github.com/geeklint/drying_paint"
readme = "README.md"
keywords = ["observer", "watch"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true }
