[package]
name = "drying_paint"
version = "0.5.0-dev0"
authors = ["Violet <violet@geeklint.com>"]
edition = "2018"

description = "Implementation of observer pattern for Rust"
homepage = "https://crates.io/crates/drying_paint"
repository = "https://github.com/geeklint/drying_paint"
readme = "README.md"
keywords = ["observer", "watch"]
license = "Apache-2.0 OR MIT OR Zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
serde = { version = "1.0", optional = true }
