[package]
name = "drying_paint"
version = "0.5.4"
authors = ["Violet <violet@geeklint.com>"]
edition = "2018"

description = "Implementation of observer pattern for Rust"
homepage = "https://crates.io/crates/drying_paint"
repository = "https://github.com/geeklint/drying_paint"
readme = "README.md"
keywords = ["observer", "watch"]
license = "Apache-2.0 OR MIT OR Zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
